--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.3.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
