--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "cookie-session": "^2.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
-    "passport": "^0.6.0",
+    "mongoose-findorcreate": "^4.0.0",
+    "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
   }
 }
