--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Nasa Daily Image application",
   "main": "app.js",
+  
   "engines": {
-    "node" : "14.x"
+    "node": "14.x"
   },
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Saadh Zahid",
@@ -22,5 +23,7 @@
     "mongoose-findorcreate": "^4.0.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
-  }
+  },
+
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
