--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "mym",
   "version": "1.0.0",
   "description": "Nasa Daily Image application",
-  "main": "app.js",
+  "main": "index.js",
   
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Saadh Zahid",
